# miniredis

./: .gitignore  Cargo.toml  README.md  aof_test.py  master.config  proxy.config  redis.aof  start_m_s.py
idl/: miniredis.thrift
src/: lib.rs
test/: test4ms.py
